# g2p-server

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  review.yml
assets/: index.html
src/: g2p.rs  handlers.rs  korean.rs  main.rs  utils.rs
