[package]
name = "g2p-server"
version = "0.1.2"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "signal"] }
lingua = "1.7.2"
vibrato = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
unicode-normalization = "0.1.25"
clap = { version = "4.5.53", features = ["derive", "env"] }
